<resources>
    <string name="app_name">Travel360</string>
    <string name="SignintoTravel360">Sign in to Travel360</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgetpassword">Forget Password</string>
    <string name="signin">Sign In</string>
    <string name="newto">New to Travel360?</string>
    <string name="createaccount">Create an account.</string>


    <string name="titleSignUp">Create your personal account</string>
    <string name="fName">First name</string>
    <string name="lName">Last name</string>
    <string name="uName">Username</string>
    <string name="tel">Contact No</string>
    <string name="pwd">Password</string>
    <string name="rePassword">Re enter password</string>
    <string name="btncreateacc">Create an account</string>


    <string name="cinnamon_lakeside_colombo">Cinnamon Lakeside Colombo</string>
    <string name="shangri_la_hotel">Shangri-La Hotel</string>
    <string name="cinnamon_grand_colombo">Cinnamon Grand Colombo</string>
    <string name="me_colombo">Me Colombo</string>
    <string name="galle_face_hotel">Galle face Hotel</string>
    <string name="mandarina_colombo">Mandarina Colombo</string>
    <string name="the_kingsbury_colombo">The Kingsbury Colombo</string>
    <string name="taj_samudra">Taj Samudra</string>
    <string name="view">View</string>
    <string name="price1">LKR 9,785.00</string>
    <string name="price2">LKR 7,281.00</string>
    <string name="price3">LKR 8,581.00</string>
    <string name="price4">LKR 10,928.00</string>
    <string name="price5">LKR 12,328.00</string>
    <string name="price6">LKR 10,928.00</string>
    <string name="price7">LKR 10,928.00</string>
    <string name="price8">LKR 10,928.00</string>
    <string name="manderina_colombo1">Manderina Colombo</string>
    <string name="rooms">Rooms</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="book">Book</string>
    <string name="price0">LKR 9,785.00</string>
    <string name="info">Hotel Information</string>
    <string name="info1">Set on a thoroughfare lined with shops and restaurants, this polished hotel is 1 km from Bambalapitiya railway station on the Laccadive Sea, and 3 km from the 19th-century Gangaramaya Temple.</string>
    <string name="info2">Hotel class</string>
    <string name="info3">Pool</string>
    <string name="info4">Room Service</string>
    <string name="info5">Airport Transportation</string>
    <string name="info6">Restaurant</string>
    <string name="info7">Wifi</string>
    <string name="feedbacks">Comments</string>
    <string name="feedback"></string>


    <string name="breakfast">Breakfast</string>
    <string name="brunch">Brunch</string>
    <string name="lunch">Lunch</string>
    <string name="coffee_and_tea">Coffee and Tea</string>
    <string name="dinner">Dinner</string>
    <string name="smoothies">Smoothies</string>
    <string name="desserts">Desserts</string>
    <string name="bars_and_pubs">Bars and Pubs</string>
    <string name="raman_hamakaze_colombo">Raman Hamakaze Colombo</string>
    <string name="cafe_kumbuk">Cafe Kumbuk</string>
    <string name="graze_kitchen">Graze Kitchen</string>
    <string name="flow">Flow</string>
    <string name="ayu">AYU</string>
    <string name="taprobane">Taprobane</string>
    <string name="plus_nine_four">Plus Nine Four</string>
    <string name="life_food">Life Food</string>
    <string name="ramen_hamakaze_colombo">Ramen Hamakaze Colombo</string>
    <string name="description">Description</string>
    <string name="description1">Japanese RAMEN Noodle Restaurant in Colombo!!! Rich collagen chicken soup!!! Wonderful homemade noodle!!! Very nice Fried Chicken "KARA-AGE" and Fried Potato!!! So good Garlic Fried Rice "Cha-Han" and Curry and Rice!!!</string>
    <string name="restaurant_info">Restaurant Info</string>
    <string name="visit_website">Visit Website</string>
    <string name="contact">+94115344644</string>
    <string name="email">Email</string>
    <string name="certificate">Certificate Of Excellence</string>
    <string name="open_now">Open now</string>
    <string name="location">91 Perahera Mawatha, Colombo 00002</string>
    <string name="comments">Comments</string>
    <string name="comment"></string>


    <string name="withdriver">withdriver</string>
    <string name="withoutdriver">With outdriver</string>
    <string name="toyota_yaris">toyota yaris</string>
    <string name="lkr_40_per_1km">lkr 40 per 1km</string>
    <string name="rentveiw1">Rent</string>
    <string name="rentveiw2">Rent</string>
    <string name="rentveiw3">Rent</string>
    <string name="rentveiw4">Rent</string>
    <string name="rentview5">Rent</string>
    <string name="toyota_yaris1">toyota yaris</string>
    <string name="rentview6">Rent</string>
    <string name="rentveiw8">Rent</string>
    <string name="rentview7">Rent</string>
    <string name="toyota_aqua">toyota aqua</string>
    <string name="lkr_45_per_1km1">lkr 45 per 1km</string>
    <string name="susuki_alto">susuki alto</string>
    <string name="lkr_35_per_1km1">lkr 35 per 1km</string>
    <string name="toyota_hiace">toyota hiace</string>
    <string name="lkr_60_per_1km">lkr 60 per 1km</string>
    <string name="toyota_wagonr">toyota wagonr</string>
    <string name="lkr_42_per_1km">lkr 42 per 1km</string>
    <string name="lkr_45_per_1km">lkr 45 per 1km</string>
    <string name="toyotaaqua1">toyota aqua</string>
    <string name="toyota_yaris2">toyota yaris</string>
    <string name="lkr_46_per_1km1">lkr 46 per 1km</string>
    <string name="_4_passenger">4 passenger</string>
    <string name="_1_bags1">1 Bags</string>
    <string name="full_to_full">Full to full</string>
    <string name="dis1">The Toyota Yaris is an ideal choice when needing a compact car with plenty of comfort and performance capabilities. ... Saftey Features: The Yaris is equipped with nine airbags and whiplash lessening seats.</string>
    <string name="bookvehicle">Book vehicle</string>
    <string name="rentId">Rent ID</string>
    <string name="telephonrnumber1">Telephone Number</string>
    <string name="addressre">Address</string>
    <string name="namere">Name</string>
    <string name="daily_bus_list">Daily bus list</string>
    <string name="colombo">Colombo</string>
    <string name="kandy">Kandy</string>
    <string name="start1">Start</string>
    <string name="reach4">Reach</string>
    <string name="dailytrainshedule">Daily Train Shedule</string>
    <string name="mathar">Mathara</string>
    <string name="start6">Start</string>
    <string name="reach10">Reach</string>
    <string name="bus">Bus</string>
    <string name="train">Train</string>
    <string name="rent">Rent</string>
    <string name="rentto">Rent To</string>
    <string name="rentfrom">Rent Form</string>
    <string name="renttime">Rent Time</string>

    <string name="editprofile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="ctnumber">Contact Number</string>


    <string name="panasonic">Panasonic Lumix LX10</string>
    <string name="camera_price">LKR 25,200.00</string>
    <string name="camera_info">Travel Item Description</string>
    <string name="camara_des">The Panasonic Lumix DMC-LX10 (LX15 in some markets) is a 20MP large-sensor compact with a bright (F1.4-2.8), 24-72mm equivalent zoom lens. Which is to say, its a very capable pocket camera. And, being a Panasonic, it has video specs and clever video-based features to back up its stills capabilities.</string>

    <string name="budgetmanager">Budget Manager</string>
    <string name="budgettransportation">Transportation</string>
    <string name="budgethotelsandrestaurant">Hotels and Restaurant</string>
    <string name="budgetbillsandtickets">Bills and Tickets</string>
    <string name="budgetfoodandbavarage">Food and Bavarage</string>
    <string name="budgetother">Other</string>
    <string name="budgettotal">Total</string>
    <string name="budgetrs">Rs.</string>
    <string name="searchhere">Search here</string>
    <string name="travelitemscart">Cart</string>
    <string name="travelItems">Travel Items</string>
    <string name="travelitemsitemName">Item Name</string>
    <string name="travelitemsitemPrice">Item Price</string>
    <string name="travelitemsitemNo">Item No</string>
    <string name="travelitemsupdate">UPDATE</string>
    <string name="travelItemsTelNo">Mobile No</string>
    <string name="travelItemsQuantity">Quantity</string>
    <string name="travelItemsCall">CALL</string>
    <string name="budgetAdd">ADD</string>
    <string name="budgetDelete">DELETE</string>
    <string name="budgetUpdate">UPDATE</string>
    <string name="tripname">Trip Name</string>
    <string name="itemDescription">Description</string>
    <string name="travelaIItem">ALL ITEMS</string>
    <string name="date_txt">Pick a Date</string>
    <string name="date_btn">Pick a Date</string>
    <string name="rooms_txt">Select no of Rooms</string>
    <string name="adults_txt">Select no of Adults</string>
    <string name="children_txt">Select no of Children</string>
    <string name="date">Date</string>
    <string name="updatebtn">Update</string>
    <string name="deletebtn">Delete</string>
    <string name="rentname">Name</string>
    <string name="rentaddress">Address</string>
    <string name="rent_contact_number">Contact Number</string>
    <string name="rent_rent_id">Rent ID</string>
    <string name="name_rent">Name</string>
    <string name="address_rent">Address</string>
    <string name="contact_number_rent">Contact Number</string>
    <string name="rent_id_rent">Rent ID</string>


</resources>
