<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDetailsHotels">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3688F7"
            android:textSize="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/date" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:hint="@string/rooms_txt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#3688F7"
        android:textSize="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/rooms" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:hint="@string/rooms_txt" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3688F7"
            android:textSize="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/adults" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:hint="@string/adults_txt" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3688F7"
            android:textSize="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/children" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:hint="@string/children_txt" />

        <Button
            android:id="@+id/button1"
            android:background="#FFBF40"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="55dp"
            android:text="@string/updatebtn" />

        <Button
            android:id="@+id/button15"
            android:background="#FFBF40"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="230dp"
            android:layout_marginTop="-40dp"
            android:text="@string/deletebtn" />

    </LinearLayout>
    </ScrollView>

</RelativeLayout>