<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/Itemname"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/travelitemsitemName" />

    <TextView

        android:id="@+id/Itemdescription"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="283dp"
        android:layout_height="54dp"
        android:layout_below="@+id/Itemname"
        android:layout_marginStart="92dp"
        android:layout_marginTop="6dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/itemDescription" />



    <TextView

        android:id="@+id/Itemprice"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Itemdescription"
        android:layout_marginStart="92dp"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/travelitemsitemPrice" />


    <ImageView
        android:id="@+id/ItemimageView"
        android:layout_width="83dp"
        android:layout_height="84dp"
        android:layout_below="@+id/Itemname"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/smallicon" />
</RelativeLayout>